tests/subtyping/ambiguous-type-as-bottom/ill-typed/inl.stella
language core;
extend with
  #ambiguous-type-as-bottom,
  #sum-types,
  #bottom-type;

fn main(a : Nat) -> Bot + Nat {
  return (fn (b : Nat) {
    return inl(0)
  })(0)
}
